feat: feature/add_gateway_kavenegar_survey
